refactor: change create endpoint to upsert
