# docs/swagger.yaml
@@ -30,6 +30,31 @@ definitions:
         example: "23.431"
         type: string
     type: object
+  currencies.UpdateCurrencyRequest:
+    properties:
+      code:
+        example: FAKEMONEY
+        type: string
+      usd_rate:
+        example: "200.132"
+        type: string
+    type: object
+  currencies.UpdateCurrencyResponse:
+    properties:
+      code:
+        example: USD
+        type: string
+      created_at:
+        type: string
+      id:
+        example: 2171f348-54b4-4a1e-8643-0972a3daf400
+        type: string
+      updated_at:
+        type: string
+      usd_rate:
+        example: "2.132"
+        type: string
+    type: object
   responses.ErrorPayload:
     properties:
       error:
@@ -49,7 +74,45 @@ info:
   version: 0.1.0
 paths:
   /currencies:
-    post:
+    patch:
+      consumes:
+      - application/json
+      description: Updates an exchange rate from a previously registered currency
+        to USD.
+      parameters:
+      - description: Currency Info
+        in: body
+        name: currency
+        required: true
+        schema:
+          $ref: '#/definitions/currencies.UpdateCurrencyRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            $ref: '#/definitions/currencies.UpdateCurrencyResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
+        "422":
+          description: Unprocessable Entity
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
+      summary: Update currency exchange rate
+      tags:
+      - Currency
+    put:
       consumes:
       - application/json
       description: Creates an exchange rate from a specified currency to USD.
@@ -73,6 +136,10 @@ paths:
             $ref: '#/definitions/responses.ErrorPayload'
         "409":
           description: Conflict
+          schema:
+            $ref: '#/definitions/responses.ErrorPayload'
+        "422":
+          description: Unprocessable Entity
           schema:
             $ref: '#/definitions/responses.ErrorPayload'
         "500":
